--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "angularfire2": "^5.2.3",
     "bootstrap": "^4.4.1",
     "firebase": "^7.6.1",
+    "ng-angular8-datatable": "^0.9.11",
+    "ng2-validation": "^4.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
