--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "firebase": "^7.6.1",
     "ng-angular8-datatable": "^0.9.11",
     "ng2-validation": "^4.2.0",
+    "ngx-owl-carousel-o": "^2.0.3",
     "rxjs": "~6.4.0",
-    "tslib": "^1.10.0",
+    "tslib": "^1.11.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
